fix(Results): :lipstick: fix letter spacing

--- a/src/scss/components/_results-panel.scss
+++ b/src/scss/components/_results-panel.scss
@@ -24,6 +24,7 @@
       display: flex !important;
       align-items: center !important;
       gap: 0.5rem;
+      letter-spacing: 0.004rem;
     }
   }
 
